# moving_multiscalemnist

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dvc.yaml  pyproject.toml
.dvc/: config
mnist/: .gitignore
moving_multiscalemnist/: __main__.py  defaults.py  digit.py  generate.py  mnist.py  prepare.py  sequence.py
tests/: conftest.py  test_digit.py  test_sequence.py
